[gd_scene load_steps=13 format=3 uid="uid://c110xdrsqmod0"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_q3d33"]
[ext_resource type="Texture2D" uid="uid://cy3l6ofl1kdsy" path="res://assets/ui/ui.png" id="2_17iw5"]
[ext_resource type="PackedScene" uid="uid://cgxghw6mubqxs" path="res://scenes/farm.tscn" id="2_b42bu"]
[ext_resource type="PackedScene" uid="uid://q2twfsbn0pr7" path="res://scenes/button.tscn" id="3_vfmdx"]
[ext_resource type="Texture2D" uid="uid://dbvmx80rpcv3f" path="res://assets/crops/wheat.png" id="4_qb4wi"]
[ext_resource type="Texture2D" uid="uid://d18aac4aii7uk" path="res://assets/crops/pumpkin.png" id="5_53lsa"]
[ext_resource type="Texture2D" uid="uid://bok280j1atw47" path="res://assets/crops/corn.png" id="5_pqr1p"]
[ext_resource type="AudioStream" uid="uid://b6d7kudldhitr" path="res://assets/tracks/intro.mp3" id="7_j43fu"]
[ext_resource type="AudioStream" uid="uid://drd2ih0h2s2wg" path="res://assets/tracks/loop.mp3" id="8_fmp4o"]
[ext_resource type="Texture2D" uid="uid://7p52kn417vag" path="res://assets/actions/water.png" id="9_3jjau"]
[ext_resource type="Texture2D" uid="uid://cg6fcsh12o3ea" path="res://assets/select_inv.png" id="10_g0uch"]
[ext_resource type="Texture2D" uid="uid://cutvfjrkcnhey" path="res://assets/actions/till.png" id="11_fjn6i"]

[node name="Main" type="Control"]
layout_mode = 3
anchor_right = 0.997
anchor_bottom = 1.003
offset_right = -0.544067
offset_bottom = 0.0559692
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q3d33")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.634776, 0.911304, 0.720938, 1)

[node name="Farm" parent="." instance=ExtResource("2_b42bu")]
layout_mode = 1
scale = Vector2(3.5, 3.5)

[node name="UI Frame" type="Sprite2D" parent="."]
scale = Vector2(3.5, 3.5)
texture = ExtResource("2_17iw5")
offset = Vector2(191, 95.75)

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 913.0
offset_top = 331.0
offset_right = 1053.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Timer"

[node name="QuotaLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 861.0
offset_top = 173.0
offset_right = 981.0
offset_bottom = 228.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Quota"

[node name="Wheat" parent="." instance=ExtResource("3_vfmdx")]
layout_mode = 0
offset_left = 0.0
offset_top = 345.0
offset_right = 508.0
offset_bottom = 853.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("4_qb4wi")

[node name="Carrot" parent="." instance=ExtResource("3_vfmdx")]
layout_mode = 1
offset_left = 7.10543e-15
offset_top = 243.0
offset_right = 508.0
offset_bottom = 751.0
scale = Vector2(0.2, 0.2)

[node name="Corn" parent="." instance=ExtResource("3_vfmdx")]
layout_mode = 0
offset_left = 0.0
offset_top = 548.0
offset_right = 508.0
offset_bottom = 1056.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("5_pqr1p")

[node name="Pumpkin" parent="." instance=ExtResource("3_vfmdx")]
layout_mode = 0
offset_left = 4.23516e-22
offset_top = 447.0
offset_right = 508.0
offset_bottom = 955.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("5_53lsa")

[node name="Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_j43fu")
autoplay = true

[node name="Loop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_fmp4o")

[node name="SaleTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Water" type="Button" parent="."]
layout_mode = 0
offset_right = 508.0
offset_bottom = 508.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("9_3jjau")

[node name="SelectInv" type="Sprite2D" parent="Water"]
position = Vector2(255, 255)
scale = Vector2(5.1, 5.1)
texture = ExtResource("10_g0uch")

[node name="Till" type="Button" parent="."]
layout_mode = 0
offset_top = 102.0
offset_right = 508.0
offset_bottom = 610.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("11_fjn6i")

[node name="SelectInv" type="Sprite2D" parent="Till"]
position = Vector2(255, 255)
scale = Vector2(5.1, 5.1)
texture = ExtResource("10_g0uch")

[connection signal="pressed" from="Wheat" to="." method="_on_wheat_pressed"]
[connection signal="pressed" from="Carrot" to="." method="_on_carrot_pressed"]
[connection signal="pressed" from="Corn" to="." method="_on_corn_pressed"]
[connection signal="pressed" from="Pumpkin" to="." method="_on_pumpkin_pressed"]
[connection signal="timeout" from="SaleTimer" to="." method="_on_sale_timer_timeout"]
[connection signal="pressed" from="Water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="Till" to="." method="_on_till_pressed"]
